Edited the collaborator page

--- a/collaborator.html
+++ b/collaborator.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="css/collaborator.css">
+    <link rel="stylesheet" href="css/collaborator.css">
 
 </head>
 <nav class="navbar navbar-expand-lg">
@@ -68,11 +68,10 @@
 </nav>
 
 <body id="body">
-
-
+    <img src="img/Collab.png" alt="" class="collabheader">
     <div class="container">
         <div class="row">
-            <div class="aboutsection col-lg-7">
+            <!-- <div class="aboutsection col-lg-7">
                 <h1>About Go Hackathon</h1>
                 <p>Go Hackathon comprises of eminent Industry professionals, educators and students meant to
                     nurture talent among budding tech professional.
@@ -87,52 +86,140 @@
             <div class="imgofabout col-lg-5">
                 <img class="imgofabout" src="img/development2" alt="Dev">
             </div>
-        </div>
-    </div>
+            </div>
+            </div> -->
 
-    <div class="container">
-        <div class="row">
-            <div class="aboutsection ">
-                <h1>why should you collab with Go Hackathon ?</h1>
+            <!-- <div class="container"> -->
+            <!-- <div class="row"> -->
+            <div class="aboutsection col-lg-7 ">
+                <h1>Why to collaborate with Go Hackathon ?</h1>
                 <br>
-                <p>Go Hackathon comprises of eminent Industry professionals, educators and students meant to
-                    nurture talent among budding tech professional.
+                <p> Go Hackathon comprises of eminent Industry professionals, educators and students meant to
+                    nurture talent among budding tech professional. <br>
                     Industry today is looking for talented students who are equipped and experience with
-                    advanced skills, software, attitude and updated industry best practices.We create an eco-system of
-                    industry academia partnership and help in continuous and
+                    advanced skills, software, attitude and updated industry best practices. <br>
+                    We create an eco-system of industry academia partnership and help in continuous and
                     sustainable development of innovative ideas, which are impactful for the growing economy and
                     society. Go hackathon thrives to provide best nurturing, mentorship, skills and professional
-                    opportunities to its members and participants.
+                    opportunities to its members and participants. <br>
                     We conduct series of events, seminars, hackathons, internships and Projects.</p>
+                    <img src="img/Collab2.png" alt="">
+            </div>
+            <!-- </div> -->
+            <!-- </div> -->
+            <!-- </div> -->
+            <div class="form col-lg-5">
+                <form>
+                    <!-- <img src="img/main_logo.png" alt=""> -->
+                    <br>
+                    <br>
+                    <h4> <strong>Collaborate With Us!!</strong> </h4>
+                    <br><br>
+                    <label for="fname">First Name:</label></br>
+                    <input type="text" id="fname" name="fname" size="50"></br>
+                    <label for="lname">Last Name:</label></br>
+                    <input type="text" id="lname" name="lname" size="50"></br>
+                    <label for="p_no">Phone Number:</label></br>
+                    <input type="tel" id="p_no" name="p_no" pattern="+91-[0-9]{9}"></br>
+                    <label for="email">Enter your email:</label></br>
+                    <input type="email" id="email" name="email" placeholde="xyz@gmail.com"></br>
+                    <p>Type of Collaboration</p>
+
+                    <input type="radio" id="collab_typ_1" value="Team Collaboration" name="cllab_typ">
+                    <label for="collab_typ_1">Team Collaboration</label></br>
+                    <input type="radio" id="collab_typ_2" value="Community Collaboration" name="cllab_typ">
+                    <label for="collab_typ_2">Community Collaboration</label></br>
+                    <input type="radio" id="collab_typ_3" value="Network Collaboration" name="cllab_typ">
+                    <label for="collab_typ_3">Network Collaboration</label></br>
+                    <input type="radio" id="collab_typ_4" value="Cloud Collaboration" name="cllab_typ">
+                    <label for="collab_typ_4">Cloud Collaboration</label></br>
+                    <input type="radio" id="collab_typ_5" value="Others" name="cllab_typ">
+                    <label for="collab_typ_5">Others</label></br>
+                    <label for="goal">Your Goal to achieve through this event/startup:</label></br>
+                    <textarea type="text" id="goal" name="goal"></textarea></br>
+                    <input class="button" type="submit" value="Submit">
+                </form>
             </div>
         </div>
     </div>
-    </div>
-    <form>
-        <label for="fname">First Name:</label></br>
-        <input type="text" id="fname" name="fname" size="50"></br>
-        <label for="lname">Last Name:</label></br>
-        <input type="text" id="lname" name="lname" size="50"></br>
-        <label for="p_no">Phone Number:</label></br>
-        <input type="tel" id="p_no" name="p_no" pattern="+91-[0-9]{9}"></br>
-        <label for="email">Enter your email:</label></br>
-        <input type="email" id="email" name="email" placeholde="xyz@gmail.com"></br>
-        <p>Type of Collaboration</p>
-
-        <input type="radio" id="collab_typ_1" value="Team Collaboration" name="cllab_typ">
-        <label for="collab_typ_1">Team Collaboration</label></br>
-        <input type="radio" id="collab_typ_2" value="Community Collaboration" name="cllab_typ">
-        <label for="collab_typ_2">Community Collaboration</label></br>
-        <input type="radio" id="collab_typ_3" value="Network Collaboration" name="cllab_typ">
-        <label for="collab_typ_3">Network Collaboration</label></br>
-        <input type="radio" id="collab_typ_4" value="Cloud Collaboration" name="cllab_typ">
-        <label for="collab_typ_4">Cloud Collaboration</label></br>
-        <input type="radio" id="collab_typ_5" value="Others" name="cllab_typ">
-        <label for="collab_typ_5">Others</label></br>
-        <label for="goal">Your Goal to achieve through this event/startup:</label></br>
-        <textarea type="text" id="goal" name="goal"></textarea></br>
-        <input class="button" type="submit" value="Submit">
-    </form>
+    <section class="section-4">
+        <div class="container text-center">
+            <h1 class="text-dark">Collaborate With Go Hackathon</h1>
+            <p class="text-secondary">Some of our collaborations with top colleges</p>
+        </div>
+        <div class="team row ">
+            <div class="col-md-4 col-12 text-center">
+                <div class="card mr-2 d-inline-block shadow-lg">
+                    <div class="card-img-top">
+                        <img src="img/collaborator1.png" class="img-fluid border-radius p-4" alt="">
+                    </div>
+                    <div   class="card-body">
+                        <h3 class="card-title">BTKU Dwarahat</h3>
+                        <p class="card-text-index">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae,
+                            veniam, illo dolor soluta assumenda
+                        </p>
+                        <a href="#" class="text-secondary text-decoration-none">Go Hackaersum</a>
+                        <p class="text-black-50">19/01/2023</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-12">
+                <div id="carouselExampleControls" class="carousel slide " data-ride="carousel">
+                    <div class="carousel-inner text-center">
+                        <div class="carousel-item active">
+                            <div class="card mr-2 d-inline-block shadow">
+                                <div class="card-img-top">
+                                    <img src="" class="img-fluid rounded-circle w-50 p-4" alt="">
+                                </div>
+                                <div class="card-body">
+                                    <h3 class="card-title">ABC College</h3>
+                                    <p class="card-text-index">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem
+                                        recusandae, veniam, illo dolor soluta assumenda
+                                    </p>
+                                    <a href="#" class="text-secondary text-decoration-none">XYZ Event</a>
+                                    <p class="text-black-50">13/12/2022</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="card  d-inline-block mr-2 shadow">
+                                <div class="card-img-top">
+                                    <img src="img/collaborator1.png" class="img-fluid rounded-circle w-50 p-4" alt="">
+                                </div>
+                                <div class="card-body">
+                                    <h3 class="card-title">XYZ college</h3>
+                                    <p class="card-text-index">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem
+                                        recusandae, veniam, illo dolor soluta assumenda
+                                    </p>
+                                    <a href="#" class="text-secondary text-decoration-none">Coding Jam</a>
+                                    <p class="text-black-50">18/11/2022</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-12 text-center">
+                <div class="card mr-2 d-inline-block shadow-lg">
+                    <div class="card-img-top">
+                        <img src="img/WIT-LOGO-1-1.png" class="img-fluid border-radius p-4" alt="">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">WIT Dehradun</h3>
+                        <p class="card-text-index">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae,
+                            veniam, illo dolor soluta assumenda
+                        </p>
+                        <a href="#" class="text-secondary text-decoration-none">Coding Competition</a>
+                        <p class="text-black-50">11/10/2022</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 <footer class="footer-section">
