--- a/demo.html
+++ b/demo.html
@@ -208,7 +208,7 @@
       </div> -->
       <div class="content-card1">
         <h5>Hackathon</h5>
-        <p>Develop and show soft skills with your coding skills. <br>28/03/23 <br> <a href="eventdetails.html"> Konw
+        <p>Develop and show soft skills with your coding skills. <br>28/03/23 <br> <a href="event.html"> Konw
             More</a></p>
       </div>
     </div>
@@ -224,6 +224,11 @@
         <circle class="stroke" cx="60" cy="60" r="50"/>
       </svg>
       </div> -->
+      <div class="content-card1">
+        <h5>Coding Jam</h5>
+        <p>Develop and show soft skills with your coding skills. <br>28/03/23 <br> <a href="event.html"> Konw
+            More</a></p>
+      </div>
     </div>
     <div class="card">
       <!-- <h3 class="title">Coding Competition</h3> -->
@@ -237,6 +242,11 @@
         <circle class="stroke" cx="60" cy="60" r="50"/>
       </svg>
       </div> -->
+      <div class="content-card2">
+        <h5>Agritech Event</h5>
+        <p>Show case ideas which will help agriculture world.<br>20/03/23 <br> <a href="event.html"> Konw
+            More</a></p>
+      </div>
     </div>
     <div class="card">
       <!-- <h3 class="title">Startup</h3> -->
@@ -250,6 +260,11 @@
         <circle class="stroke" cx="60" cy="60" r="50"/>
       </svg>
       </div> -->
+      <div class="content-card1">
+        <h5>Hackathon</h5>
+        <p>Develop and show soft skills with your coding skills. <br>28/03/23 <br> <a href="event.html"> Konw
+            More</a></p>
+      </div>
     </div>
   </div>
   <h2 class="heading"> <strong>Past Events</strong>  </h2>
@@ -270,7 +285,8 @@
         EVENT1 <a href="">Konw More</a>
       </div> -->
       <div class="content-card1">
-        <p>Develop and show your soft skills , which will be coupled with your coding skills</p>
+        <h5>Ideathon</h5>
+        <p>Develop and show your soft skills , which will be coupled with your coding skills <a href="event.html">Know More</a> </p>
       </div>
     </div>
     <div class="card">
@@ -285,6 +301,11 @@
         <circle class="stroke" cx="60" cy="60" r="50"/>
       </svg>
       </div> -->
+      <div class="content-card2">
+        <h5>Agritech Event</h5>
+        <p>Show case ideas which will help agriculture world.<br>20/03/23 <br> <a href="event.html"> Konw
+            More</a></p>
+      </div>
     </div>
     <div class="card">
       <!-- <h3 class="title">Card 3</h3> -->
@@ -298,6 +319,11 @@
         <circle class="stroke" cx="60" cy="60" r="50"/>
       </svg>
       </div> -->
+      <div class="content-card1">
+        <h5>Code Up</h5>
+        <p>Develop and show soft skills with your coding skills. <br>28/03/23 <br> <a href="event.html"> Konw
+            More</a></p>
+      </div>
     </div>
     <div class="card">
       <!-- <h3 class="title">Card 4</h3> -->
@@ -311,6 +337,11 @@
         <circle class="stroke" cx="60" cy="60" r="50"/>
       </svg>
       </div> -->
+      <div class="content-card1">
+        <h5>Hackathon</h5>
+        <p>Develop and show soft skills with your coding skills. <br>28/03/23 <br> <a href="event.html"> Konw
+            More</a></p>
+      </div>
     </div>
     <div class="card">
       <!-- <h3 class="title">Hackathon</h3> -->
@@ -329,7 +360,7 @@
       </div> -->
       <div class="content-card1">
         <h5>Hackathon</h5>
-        <p>Develop and show soft skills with your coding skills. <br>28/03/23 <br> <a href="eventdetails.html"> Konw
+        <p>Develop and show soft skills with your coding skills. <br>28/03/23 <br> <a href="event.html"> Konw
             More</a></p>
       </div>
     </div>
