--- a/MyProfile.html
+++ b/MyProfile.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="MyProfile.css">
+    <link rel="stylesheet" href="css/MyProfile.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
+        rel="stylesheet">
     <title>MyProfile</title>
 </head>
 
@@ -20,6 +25,12 @@
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
             </p>
+            <div class="profile-content">
+                <a href="#">View Profile</a> <br>
+                <a href="">Settings</a> <br>
+                <a href="">My Content</a> <br>
+                <a href="">Log out</a>
+            </div>
         </div>
         <div class="right">
             <a href="index.html"><img src="img/crossback.png" alt=""></a>
@@ -60,11 +71,12 @@
                 </div>
             </div>
             <div class="myprofileoption">
-                  <a href="dashboard.html">Dashboard</a> &nbsp;&nbsp;
-                  <a href="event.html">Recommended Events</a>       &nbsp; &nbsp;    &nbsp; &nbsp;       
-                  <a href="">Recommended Courses</a> &nbsp;&nbsp;&nbsp; &nbsp;
-                  <a href="dashboard.html">Your Activity</a>&nbsp;&nbsp;&nbsp; &nbsp; <br> <br>
-                <button class="Logout">Logout</button>
+                  <a href="dashboard.html">Dashboard</a> <br>
+                  <a href="event.html">Recommended Events</a>     <br>     
+                  <a href="checkout.html">Recommended Courses</a> <br>
+                  <a href="">Your Certificates</a>
+                  <a href="dashboard.html"> | Activity <br> <br>
+                <!-- <button class="Logout">Logout</button> -->
             </div>
         </div>
     </div>
