--- a/winners.html
+++ b/winners.html
@@ -147,7 +147,7 @@
                             <img src="img/First-Prize-Coding.jpeg" class="First-Prize" style="width:100%">
                         </figure>
                     </div>
-                    <div class="ev-1-3-fig1-participants">
+                    <div class="fig1-1-3-participants">
                         <figure class="ev-1-3-fig1-participant1">
                             <img src="img/Jatin-Pic-1st-Coding-150x150.jpeg" class="Participant1" >
                             <figcaption>Jatin Gusain</figcaption>
@@ -170,15 +170,15 @@
                     </div>
                     <div class="ev-1-3-fig2-participants">
                         <figure class="ev-1-3-fig2-participant1">
-                            <img src="img/blurred.jpg" class="Participant1" >
+                            <img src="img/no_image-2nd-Coding.png" class="Participant1" >
                             <figcaption>XYZ</figcaption>
                         </figure>
                         <figure class="ev-1-3-fig2-participant2">
-                            <img src="img/blurred.jpg" class="Participant2" >
+                            <img src="img/no_image-2nd-Coding.png" class="Participant2" >
                             <figcaption>XYZ</figcaption>
                         </figure>
                         <figure class="ev-1-3-fig2-participant3">
-                            <img src="img/blurred.jpg" class="Participant3" >
+                            <img src="img/no_image-2nd-Coding.png" class="Participant3" >
                             <figcaption>XYZ</figcaption>
                         </figure>
                     </div>
