--- a/practiceset.html
+++ b/practiceset.html
@@ -70,22 +70,22 @@
 
 <body>
     <div class="overflow-auto">
-        <div class="w-full h-1/2 pb-7 pt-4 flex flex-col justify-center text-center bg-blue-300">
+        <div class="w-full h-1/2 pb-5 pt-4 flex flex-col justify-center text-center ">
             <h1 class="text-5xl pb-7">Quiz</h1>
             <a href="#">
-                <img src="img/PRACTICESET/QUIZ.jpg" class="h-[600px] mx-auto" alt="">
+                <img src="img/PRACTICESET/QUIZ.jpg" class="h-[500px] mx-auto" alt="">
             </a>
         </div>
         <div class="bg-white p-7"></div>
 
-        <div class="bg-blue-300">
+        <div class=" pb-5 pt-4">
             <h2 class="uppercase text-center text-4xl pb-7">Courses</h2>
-            <div class="grid grid-cols-5 gap-2 p-8 pt-4">
+            <div class="grid grid-cols-4 gap-4 p-8 pt-4">
 
                 <!-- 3 elements wala div -->
-                <div>
+                <div class="  px-3 py-3">
                     <!-- first element  web desigening -->
-                    <div class="flex flex-col bg-black max-w-[250px] min-h-[300px] items-center">
+                    <div class="flex flex-col bg-black max-w-[255px] min-h-[300px] items-center">
                         <img src="img/PRACTICESET/webdesign.jpg" class="w-full h-[200px]" alt="">
                         <!-- heading tag -->
                         <h2 class="text-white"> Web desigening</h2>
@@ -100,13 +100,13 @@
                             <!-- star div -->
                             <div class="flex pl-2 pr-2 text-white">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6 fill-orange-600">
                                     <path stroke-linecap="round" stroke-linejoin="round"
                                         d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
                                 </svg>
 
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5"
+                                    stroke="currentColor" class="w-6 h-6 fill-orange-600">
                                     <path stroke-linecap="round" stroke-linejoin="round"
                                         d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
                                 </svg>
@@ -136,7 +136,7 @@
                     <!-- third element -->
                     <div></div>
                 </div>
-                <div>
+                <div class="px-3 py-4">
                     <!-- first element  web desigening -->
                     <div class="flex flex-col bg-black max-w-[250px] min-h-[300px] items-center">
                         <img src="img/feature/datascience.jpg" class="w-full h-[200px]" alt="">
@@ -189,7 +189,7 @@
                     <!-- third element -->
                     <div></div>
                 </div>
-                <div>
+                <div class="px-3 py-4">
                     <!-- first element  web desigening -->
                     <div class="flex flex-col bg-black max-w-[250px] min-h-[300px] items-center">
                         <img src="img/feature/datastructure.jpg" class="w-full h-[200px]" alt="">
@@ -242,7 +242,7 @@
                     <!-- third element -->
                     <div></div>
                 </div>
-                <div>
+                <div class="px-3 py-3">
                     <!-- first element  web desigening -->
                     <div class="flex flex-col bg-black max-w-[250px] min-h-[300px] items-center">
                         <img src="img/feature/avg.jpg" class="w-full h-[200px]" alt="">
@@ -295,7 +295,7 @@
                     <!-- third element -->
                     <div></div>
                 </div>
-                <div>
+                <div class="px-3 py-3">
                     <!-- first element  web desigening -->
                     <div class="flex flex-col bg-black max-w-[250px] min-h-[300px] items-center">
                         <img src="img/PRACTICESET/images.jpg" class="w-full h-[200px]" alt="">
@@ -348,7 +348,7 @@
                     <!-- third element -->
                     <div></div>
                 </div>
-                <div>
+                <div class="px-3 py-4">
                     <!-- first element  web desigening -->
                     <div class="flex flex-col bg-black max-w-[250px] min-h-[300px] items-center">
                         <img src="img/PRACTICESET/download.jpg" class="w-full h-[200px]" alt="">
@@ -401,7 +401,7 @@
                     <!-- third element -->
                     <div></div>
                 </div>
-                <div>
+                <div class="px-3 py-3">
                     <!-- first element  web desigening -->
                     <div class="flex flex-col bg-black max-w-[250px] min-h-[300px] items-center">
                         <img src="quizImage.png" class="w-full h-[200px]" alt="">
@@ -454,7 +454,7 @@
                     <!-- third element -->
                     <div></div>
                 </div>
-                <div>
+                <div class="px-3 py-3">
                     <!-- first element  web desigening -->
                     <div class="flex flex-col bg-black max-w-[250px] min-h-[300px] items-center">
                         <img src="quizImage.png" class="w-full h-[200px]" alt="">
@@ -515,27 +515,27 @@
         <div class="bg-white p-7"></div>
 
         <!-- coding competition  -->
-        <div class=" bg-blue-300 pb-7">
-            <h2 class="text-center mx-auto text-2xl pb-6 ">Coding Compitition</h2>
-            <div class="flex items-center mx-auto">
+        <div class="  pb-24 ">
+            <h2 class="text-center mx-auto text-2xl pb-11 pb-16 ">Coding Compitition</h2>
+            <div class="flex items-center mx-auto pt-4 pb-5">
                 <!-- text button -->
                 <div class="flex mx-auto ">
                     <a href="">
-                        <h2 class="max-h-[100px] w-[300px] bg-blue-500 text-center text-white rounded-full px-3 py-4">
+                        <h2 class="max-h-[100px] w-[200px] bg-blue-500 text-center text-white rounded-full px-3 py-4">
                             Past coding Competitions</h2>
                     </a>
                 </div>
                 <!-- text button -->
                 <div class="flex px-[100px]">
                     <a href="">
-                        <h2 class="max-h-[100px] w-[300px] bg-blue-500 text-center text-white rounded-full px-3 py-4">
+                        <h2 class="max-h-[100px] w-[200px] bg-blue-500 text-center text-white rounded-full px-3 py-4">
                             Past coding Competitions</h2>
                     </a>
                 </div>
                 <!-- text button -->
                 <div class="flex px-[100px]">
                     <a href="">
-                        <h2 class="max-h-[100px] w-[300px] bg-blue-500 text-center text-white rounded-full px-3 py-4">
+                        <h2 class="max-h-[100px] w-[200px] bg-blue-500 text-center text-white rounded-full px-3 py-4">
                             Past coding Competitions</h2>
                     </a>
                 </div>
