--- a/winners_page.html
+++ b/winners_page.html
@@ -81,20 +81,21 @@
     <img src="img/XYZ.png" alt="">
     </div>  
     <div class="wrapper">
-        <h3 class="card-title">Winners</h3>
+        <h3 class="card-title">Results</h3>
          <div class="cols">
             <div class="col">
               <div class="container">				
                 <div class="front">					
                     <div class="inner">
-                    <span><img src="images/img1.png" alt=""></span>
-                    <p></p>              
+                    <div class="front1">
+                        <p >Krishivikalp</p> 
+                    </div>             
                     </div>
                 </div>
                 <div class="back">
                     <div class="inner">                   
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quas unde dignissimos recusandae cupiditate id quis autem ea optio beatae.</p><br>
-                      <a href="#">Read more...</a>
+                      <a href="#"><b>View Winners...</b></a>
                     </div>
                 </div>
               </div>
@@ -104,13 +105,13 @@
                 <div class="front">
                   <div class="inner">
                   <span><img src="images/img2.png" alt=""></span>
-                  <p>Lorem Ipsum</p>
+                  <p>Hackathon</p>
                   </div>
                 </div>
                 <div class="back">
                   <div class="inner">
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quas unde dignissimos recusandae cupiditate id quis autem ea optio beatae.</p><br>
-                      <a href="#">Read more...</a>
+                      <a href="#"><b>View Winners...</b></a>
                   </div>
                 </div>
               </div>
@@ -120,13 +121,13 @@
                 <div class="front">
                   <div class="inner">
                   <span><img src="images/img3.png" alt=""></span>
-                  <p>Lorem Ipsum</p>
+                  <p>Ideathon</p>
                   </div>
                 </div>
                 <div class="back">
                   <div class="inner">
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quas unde dignissimos recusandae cupiditate id quis autem ea optio beatae.</p><br>
-                      <a href="#">Read more...</a>
+                      <a href="#"><b>View Winners...</b></a>
                   </div>
                 </div>
               </div>
@@ -136,13 +137,13 @@
                 <div class="front">
                   <div class="inner">
                   <span><img src="images/img4.png" alt=""></span>
-                  <p>Lorem Ipsum</p>
+                  <p>Coding Competition</p>
                   </div>
                 </div>
                 <div class="back">
                   <div class="inner">
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quas unde dignissimos recusandae cupiditate id quis autem ea optio beatae.</p><br>
-                      <a href="#">Read more...</a>
+                      <a href="#"><b>View Winners...</b></a>
                   </div>
                 </div>
               </div>
