--- a/collaborator.html
+++ b/collaborator.html
@@ -17,9 +17,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
         rel="stylesheet">
         <link rel="stylesheet" href="css/collaborator.css">
+        <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg ">
     <a class="navbar-brand" href="index.html">
         <img class="logoimg" src="img/main_logo.png" alt="">
     </a>
@@ -27,7 +28,7 @@
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-align-right text-dark"></i>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse-A navbar-collapse" id="navbarNav">
         <div class="mr-auto"></div>
         <ul class="navbar-nav">
             <li class="nav-item">
@@ -70,11 +71,12 @@
 <body id="body">
 
 
-    <div class="container">
-        <div class="row">
+    <div class="container ">
+        <div class="row ">
             <div class="aboutsection col-lg-7">
-                <h1>About Go Hackathon</h1>
-                <p>Go Hackathon comprises of eminent Industry professionals, educators and students meant to
+                <div>
+                <h1 class="text-5xl pb-10">About Go Hackathon</h1>
+                <p class="text-xl">Go Hackathon comprises of eminent Industry professionals, educators and students meant to
                     nurture talent among budding tech professional.
                     Industry today is looking for talented students who are equipped and experience with
                     advanced skills, software, attitude and updated industry best practices.We create an eco-system of
@@ -83,32 +85,89 @@
                     society. Go hackathon thrives to provide best nurturing, mentorship, skills and professional
                     opportunities to its members and participants.
                     We conduct series of events, seminars, hackathons, internships and Projects.</p>
-            </div>
-            <div class="imgofabout col-lg-5">
-                <img class="imgofabout" src="img/development2" alt="Dev">
+                </div>
+                <div class="aboutsection ">
+                    <h1 class="text-5xl " >Why should you collab with Go Hackathon ?</h1>
+                    <br>
+                    <p class="text-xl">Go Hackathon comprises of eminent Industry professionals, educators and students meant to
+                        nurture talent among budding tech professional.
+                        Industry today is looking for talented students who are equipped and experience with
+                        advanced skills, software, attitude and updated industry best practices.We create an eco-system of
+                        industry academia partnership and help in continuous and
+                        sustainable development of innovative ideas, which are impactful for the growing economy and
+                        society. Go hackathon thrives to provide best nurturing, mentorship, skills and professional
+                        opportunities to its members and participants.
+                        We conduct series of events, seminars, hackathons, internships and Projects.</p>
+                </div>
+
+                </div>
+            <div class="imgofabout col-lg-5 pt-20">
+                <form class="text-left bg-white ">
+                    <label for="fname">First Name:</label></br>
+                    <input type="text" id="fname" name="fname" size="50" class="bg-gray-200"></br>
+                    <label for="lname">Last Name:</label></br>
+                    <input type="text" id="lname" name="lname" size="50"  class="bg-gray-200"></br>
+                    <label for="p_no">Phone Number:</label></br>
+                    <input type="tel" id="p_no" name="p_no" pattern="+91-[0-9]{9}"  class="bg-gray-200"></br>
+                    <label for="email">Enter your email:</label></br>
+                    <input type="email" id="email" name="email" placeholde="xyz@gmail.com" class="bg-gray-200"></br>
+                    <p>Type of Collaboration</p>
+            
+                    <input type="radio" id="collab_typ_1" value="Team Collaboration" name="cllab_typ"  class="bg-gray-200">
+                    <label for="collab_typ_1">Team Collaboration</label></br>
+                    <input type="radio" id="collab_typ_2" value="Community Collaboration" name="cllab_typ" class="bg-gray-200">
+                    <label for="collab_typ_2">Community Collaboration</label></br>
+                    <input type="radio" id="collab_typ_3" value="Network Collaboration" name="cllab_typ" class="bg-gray-200">
+                    <label for="collab_typ_3">Network Collaboration</label></br>
+                    <input type="radio" id="collab_typ_4" value="Cloud Collaboration" name="cllab_typ" class="bg-gray-200">
+                    <label for="collab_typ_4">Cloud Collaboration</label></br>
+                    <input type="radio" id="collab_typ_5" value="Others" name="cllab_typ" class="bg-gray-200">
+                    <label for="collab_typ_5">Others</label></br>
+                    <label for="goal">Your Goal to achieve through this event/startup:</label></br>
+                    <textarea type="text" id="goal" name="goal" class="bg-gray-200"></textarea></br>
+                    <input class="button" type="submit" value="Submit" class="bg-gray-200">
+                </form>
             </div>
         </div>
+    </div>
+    <div class="flex pl-12 pt-20 pb-10">
+        <!-- benifits section -->
+        <div class="pl-10">
+            <h1 class="text-5xl">Benifits</h1>
+            <br>
+            <p class="text-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et eos voluptate magnam reiciendis non, 
+                ipsam saepe quas quaerat temporibus deserunt ad praesentium? Voluptatum incidunt debitis veritatis repudiandae hic, 
+                eos aliquam, iste quis cumque id neque. Dolorum exercitationem, minima minus asperiores dolore debitis quibusdam earum 
+                consequatur quaerat reprehenderit tenetur, voluptate tempora alias praesentium in officiis magnam recusandae sapiente fugit?
+                 Esse, sunt.</p>
+        </div>
+        <!-- image section -->
+        <div class="imgofabout  col-lg-5 gap-5 pl-10">
+            <img class=" pl-10 w-[80%] h-[100%] streach" src="img/development2" alt="Dev">
+        </div>
+
     </div>
 
-    <div class="container">
-        <div class="row">
+    <!-- <div class="container">
+        <div class="row flex flex-row">
             <div class="aboutsection ">
-                <h1>why should you collab with Go Hackathon ?</h1>
+                <h1>Benifits</h1>
                 <br>
-                <p>Go Hackathon comprises of eminent Industry professionals, educators and students meant to
-                    nurture talent among budding tech professional.
-                    Industry today is looking for talented students who are equipped and experience with
-                    advanced skills, software, attitude and updated industry best practices.We create an eco-system of
-                    industry academia partnership and help in continuous and
-                    sustainable development of innovative ideas, which are impactful for the growing economy and
-                    society. Go hackathon thrives to provide best nurturing, mentorship, skills and professional
-                    opportunities to its members and participants.
-                    We conduct series of events, seminars, hackathons, internships and Projects.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et eos voluptate magnam reiciendis non, 
+                    ipsam saepe quas quaerat temporibus deserunt ad praesentium? Voluptatum incidunt debitis veritatis repudiandae hic, 
+                    eos aliquam, iste quis cumque id neque. Dolorum exercitationem, minima minus asperiores dolore debitis quibusdam earum 
+                    consequatur quaerat reprehenderit tenetur, voluptate tempora alias praesentium in officiis magnam recusandae sapiente fugit?
+                     Esse, sunt.</p>
+            </div>
+            <div>
+                <div class="imgofabout col-lg-5">
+                    <img class="imgofabout" src="img/development2" alt="Dev">
+                </div>
             </div>
         </div>
+    </div> -->
     </div>
-    </div>
-    <form>
+    <!-- <form>
         <label for="fname">First Name:</label></br>
         <input type="text" id="fname" name="fname" size="50"></br>
         <label for="lname">Last Name:</label></br>
@@ -132,7 +191,7 @@
         <label for="goal">Your Goal to achieve through this event/startup:</label></br>
         <textarea type="text" id="goal" name="goal"></textarea></br>
         <input class="button" type="submit" value="Submit">
-    </form>
+    </form> -->
 </body>
 
 <footer class="footer-section">
