--- a/collaborator.html
+++ b/collaborator.html
@@ -20,7 +20,7 @@
         <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
-<nav class="navbar navbar-expand-lg ">
+<nav class="navbar navbar-expand-lg overflow-x-hidden">
     <a class="navbar-brand" href="index.html">
         <img class="logoimg" src="img/main_logo.png" alt="">
     </a>
@@ -68,13 +68,13 @@
     </div>
 </nav>
 
-<body id="body">
+<body id="body" class="overflow-x-hidden ">
 
-
-    <div class="container ">
-        <div class="row ">
+<div class="wrapper mx-5">
+    <div class="container mr-3">
+        <div class="row pl-5 ml-1">
             <div class="aboutsection col-lg-7 pt-5 pl-5 ">
-                <div>
+                <div class="pl-1">
                 <h1 class="text-5xl pb-10">About Go Hackathon</h1>
                 <p class="text-xl">Go Hackathon comprises of eminent Industry professionals, educators and students meant to
                     nurture talent among budding tech professional.
@@ -87,7 +87,7 @@
                     We conduct series of events, seminars, hackathons, internships and Projects.</p>
                 </div>
                 <div class="aboutsection pl-5">
-                    <h1 class="text-5xl " >Why should you collab with Go Hackathon ?</h1>
+                    <h1 class="text-5xl pl-1 " >Why should you collab with Go Hackathon ?</h1>
                     <br>
                     <p class="text-xl pl-2">Go Hackathon comprises of eminent Industry professionals, educators and students meant to
                         nurture talent among budding tech professional.
@@ -101,7 +101,7 @@
                 </div>
 
                 </div>
-            <div class="imgofabout col-lg-5 pt-20">
+            <div class="imgofabout col-lg-5  pt-20">
                 <form class="text-left bg-white ">
                     <label for="fname">First Name:</label></br>
                     <input type="text" id="fname" name="fname" size="50" class="bg-gray-200"></br>
@@ -130,7 +130,7 @@
             </div>
         </div>
     </div>
-    <div class="flex pl-4 pt-20 pb-10">
+    <div class="flex  pt-20 pb-10">
         <!-- benifits section -->
         <div class="pl-10">
             <h1 class="text-5xl">Benifits</h1>
@@ -147,6 +147,7 @@
         </div>
 
     </div>
+</div>
 
     <!-- <div class="container">
         <div class="row flex flex-row">
