Updated collaborator page

--- a/collaborator.html
+++ b/collaborator.html
@@ -133,7 +133,7 @@
     <div class="flex  pt-20 pb-10">
         <!-- benifits section -->
         <div class="pl-10">
-            <h1 class="text-5xl">Benifits</h1>
+            <h1 class="text-5xl">Benefits</h1>
             <br>
             <p class="text-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et eos voluptate magnam reiciendis non, 
                 ipsam saepe quas quaerat temporibus deserunt ad praesentium? Voluptatum incidunt debitis veritatis repudiandae hic, 
