--- a/collaborator.html
+++ b/collaborator.html
@@ -16,8 +16,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="css/collaborator.css">
-        <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="css/collaborator.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
 <nav class="navbar navbar-expand-lg ">
@@ -75,24 +75,28 @@
         <div class="row ">
             <div class="aboutsection col-lg-7 pt-5 pl-5 ">
                 <div>
-                <h1 class="text-5xl pb-10">About Go Hackathon</h1>
-                <p class="text-xl">Go Hackathon comprises of eminent Industry professionals, educators and students meant to
-                    nurture talent among budding tech professional.
-                    Industry today is looking for talented students who are equipped and experience with
-                    advanced skills, software, attitude and updated industry best practices.We create an eco-system of
-                    industry academia partnership and help in continuous and
-                    sustainable development of innovative ideas, which are impactful for the growing economy and
-                    society. Go hackathon thrives to provide best nurturing, mentorship, skills and professional
-                    opportunities to its members and participants.
-                    We conduct series of events, seminars, hackathons, internships and Projects.</p>
-                </div>
-                <div class="aboutsection pl-5">
-                    <h1 class="text-5xl " >Why should you collab with Go Hackathon ?</h1>
-                    <br>
-                    <p class="text-xl pl-2">Go Hackathon comprises of eminent Industry professionals, educators and students meant to
+                    <h1 class="text-5xl pb-10">About Go Hackathon</h1>
+                    <p class="text-xl">Go Hackathon comprises of eminent Industry professionals, educators and students
+                        meant to
                         nurture talent among budding tech professional.
                         Industry today is looking for talented students who are equipped and experience with
-                        advanced skills, software, attitude and updated industry best practices.We create an eco-system of
+                        advanced skills, software, attitude and updated industry best practices.We create an eco-system
+                        of
+                        industry academia partnership and help in continuous and
+                        sustainable development of innovative ideas, which are impactful for the growing economy and
+                        society. Go hackathon thrives to provide best nurturing, mentorship, skills and professional
+                        opportunities to its members and participants.
+                        We conduct series of events, seminars, hackathons, internships and Projects.</p>
+                </div>
+                <div class="aboutsection pl-5">
+                    <h1 class="text-5xl ">Why should you collab with Go Hackathon ?</h1>
+                    <br>
+                    <p class="text-xl pl-2">Go Hackathon comprises of eminent Industry professionals, educators and
+                        students meant to
+                        nurture talent among budding tech professional.
+                        Industry today is looking for talented students who are equipped and experience with
+                        advanced skills, software, attitude and updated industry best practices.We create an eco-system
+                        of
                         industry academia partnership and help in continuous and
                         sustainable development of innovative ideas, which are impactful for the growing economy and
                         society. Go hackathon thrives to provide best nurturing, mentorship, skills and professional
@@ -100,32 +104,36 @@
                         We conduct series of events, seminars, hackathons, internships and Projects.</p>
                 </div>
 
-                </div>
+            </div>
             <div class="imgofabout col-lg-5 pt-20">
                 <form class="text-left bg-white ">
                     <label for="fname">First Name:</label></br>
                     <input type="text" id="fname" name="fname" size="50" class="bg-gray-200"></br>
                     <label for="lname">Last Name:</label></br>
-                    <input type="text" id="lname" name="lname" size="50"  class="bg-gray-200"></br>
+                    <input type="text" id="lname" name="lname" size="50" class="bg-gray-200"></br>
                     <label for="p_no">Phone Number:</label></br>
-                    <input type="tel" id="p_no" name="p_no" pattern="+91-[0-9]{9}"  class="bg-gray-200"></br>
+                    <input type="tel" id="p_no" name="p_no" pattern="+91-[0-9]{9}" class="bg-gray-200"></br>
                     <label for="email">Enter your email:</label></br>
                     <input type="email" id="email" name="email" placeholde="xyz@gmail.com" class="bg-gray-200"></br>
                     <p>Type of Collaboration</p>
-            
-                    <input type="radio" id="collab_typ_1" value="Team Collaboration" name="cllab_typ"  class="bg-gray-200">
+
+                    <input type="radio" id="collab_typ_1" value="Team Collaboration" name="cllab_typ"
+                        class="bg-gray-200">
                     <label for="collab_typ_1">Team Collaboration</label></br>
-                    <input type="radio" id="collab_typ_2" value="Community Collaboration" name="cllab_typ" class="bg-gray-200">
+                    <input type="radio" id="collab_typ_2" value="Community Collaboration" name="cllab_typ"
+                        class="bg-gray-200">
                     <label for="collab_typ_2">Community Collaboration</label></br>
-                    <input type="radio" id="collab_typ_3" value="Network Collaboration" name="cllab_typ" class="bg-gray-200">
+                    <input type="radio" id="collab_typ_3" value="Network Collaboration" name="cllab_typ"
+                        class="bg-gray-200">
                     <label for="collab_typ_3">Network Collaboration</label></br>
-                    <input type="radio" id="collab_typ_4" value="Cloud Collaboration" name="cllab_typ" class="bg-gray-200">
+                    <input type="radio" id="collab_typ_4" value="Cloud Collaboration" name="cllab_typ"
+                        class="bg-gray-200">
                     <label for="collab_typ_4">Cloud Collaboration</label></br>
                     <input type="radio" id="collab_typ_5" value="Others" name="cllab_typ" class="bg-gray-200">
                     <label for="collab_typ_5">Others</label></br>
                     <label for="goal">Your Goal to achieve through this event/startup:</label></br>
                     <textarea type="text" id="goal" name="goal" class="bg-gray-200"></textarea></br>
-                    <input class="button bg-gray-500 rounded-sm" type="submit" value="Submit" >
+                    <input class="button bg-gray-500 rounded-sm" type="submit" value="Submit">
                 </form>
             </div>
         </div>
@@ -135,11 +143,15 @@
         <div class="pl-10">
             <h1 class="text-5xl">Benifits</h1>
             <br>
-            <p class="text-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et eos voluptate magnam reiciendis non, 
-                ipsam saepe quas quaerat temporibus deserunt ad praesentium? Voluptatum incidunt debitis veritatis repudiandae hic, 
-                eos aliquam, iste quis cumque id neque. Dolorum exercitationem, minima minus asperiores dolore debitis quibusdam earum 
-                consequatur quaerat reprehenderit tenetur, voluptate tempora alias praesentium in officiis magnam recusandae sapiente fugit?
-                 Esse, sunt.</p>
+            <p class="text-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et eos voluptate magnam
+                reiciendis non,
+                ipsam saepe quas quaerat temporibus deserunt ad praesentium? Voluptatum incidunt debitis veritatis
+                repudiandae hic,
+                eos aliquam, iste quis cumque id neque. Dolorum exercitationem, minima minus asperiores dolore debitis
+                quibusdam earum
+                consequatur quaerat reprehenderit tenetur, voluptate tempora alias praesentium in officiis magnam
+                recusandae sapiente fugit?
+                Esse, sunt.</p>
         </div>
         <!-- image section -->
         <div class="imgofabout  col-lg-5 gap-5 pl-10">
