--- a/collaborator.html
+++ b/collaborator.html
@@ -50,7 +50,7 @@
                     <div class="dropdown-content">
                         <a href="leaderboard.html">LEADERBOARD</a>
                         <a href="practiceset.html">PRACTICE SET</a>
-                        <a href="#">PARTICIPANTS</a>
+                        <a href="participants.html">PARTICIPANTS</a>
                         <a href="#">WINNERS</a>
                     </div>
                 </div>
