--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
                     <div class="dropdown-content">
                         <a href="leaderboard.html">LEADERBOARD</a>
                         <a href="practiceset.html">PRACTICE SET</a>
-                        <a href="#">PARTICIPANTS</a>
+                        <a href="participants.html">PARTICIPANTS</a>
                         <a href="#">WINNERS</a>
                     </div>
                 </div>
