Changes in the winner_page

--- a/winners_page.html
+++ b/winners_page.html
@@ -77,8 +77,8 @@
   
 <div class="main">
     <div class="head">
-    <div class="evebanner">
-    <img src="img/XYZ.png" alt="">
+    <div class="winnerbanner">
+    <img src="img/winners-banner.png" alt="">
     </div>  
     <div class="wrapper">
         <h3 class="card-title">Results</h3>
@@ -87,9 +87,10 @@
               <div class="container">				
                 <div class="front">					
                     <div class="inner">
-                    <div class="front1">
+                    <!-- <div class="front1"> -->
+                        <span><img src="img/Krishi.jpg" alt=""></span>
                         <p >Krishivikalp</p> 
-                    </div>             
+                    <!-- </div>              -->
                     </div>
                 </div>
                 <div class="back">
@@ -104,7 +105,7 @@
               <div class="container">
                 <div class="front">
                   <div class="inner">
-                  <span><img src="images/img2.png" alt=""></span>
+                  <span><img src="img/img2.jpeg" alt=""></span>
                   <p>Hackathon</p>
                   </div>
                 </div>
@@ -120,7 +121,7 @@
               <div class="container">
                 <div class="front">
                   <div class="inner">
-                  <span><img src="images/img3.png" alt=""></span>
+                  <span><img src="img/img3.png" alt=""></span>
                   <p>Ideathon</p>
                   </div>
                 </div>
@@ -136,7 +137,7 @@
               <div class="container">
                 <div class="front">
                   <div class="inner">
-                  <span><img src="images/img4.png" alt=""></span>
+                  <span><img src="img/img4.cms" alt=""></span>
                   <p>Coding Competition</p>
                   </div>
                 </div>
