--- a/winners.html
+++ b/winners.html
@@ -79,13 +79,16 @@
     <div class="head">
         <h3 class="card-title"> Ideathon Results</h3>    
         <div class = "container">
+            <h3> 1st Position</h3>
             <div class ="card">
                 <img src ="img/Kunal-Thapliyal-1st-Ideathon-150x150.jpeg" alt ="Kunal Thapliyal" class="img">
                 <div class="intro">
                     <h1> Kunal Thapliyal</h1>
+                    
                     <p> <span> Winner Ideathon</span>- secured 1st positon in Ideathon </p>
                 </div>
             </div>
+            <h3> 2nd Position</h3>
             <div class ="card">
                 <img src ="img/Daksh-Suryavanshi-2nd-Ideathon-150x150.jpeg" alt ="Daksh Suryavanshi" class="img">
                 <div class="intro">
@@ -93,7 +96,7 @@
                     <p> <span> Runner up Ideathon</span>- secured 2nd positon in Ideathon </p>
                 </div>
             </div>
-            
+            <h3> 3rd Position</h3>
             <div class ="card">
                 <img src ="img/Harsh-Pic-3rd-Ideathon150x150.jpeg" alt ="Harsh" class="img">
                 <div class="intro">
@@ -116,6 +119,7 @@
                 </div>
             </div>
         </div>
+
 
   
     </div>
