Add Header Images in Pages

--- a/about.html
+++ b/about.html
@@ -69,12 +69,14 @@
         </nav>
 
 <body id="body">
-    
+    <div class="evebanner">
+        <img src="img/About.png" alt="">
+      </div>
         
             <div class="container">
                 <div class="row">
                     <div class="aboutsection col-lg-7">
-                        <h1>About Go Hackathon</h1>
+                        <h1>About GoHackathon</h1>
                         <p>Go Hackathon comprises of eminent Industry professionals, educators and students meant to
                             nurture talent among budding tech professional.
                             Industry today is looking for talented students who are equipped and experience with
