--- a/collaborator.html
+++ b/collaborator.html
@@ -70,6 +70,10 @@
 
 <body id="body" class="overflow-x-hidden ">
 
+    <div class="evebanner">
+        <img src="img/Collaborator.png" alt="">
+      </div>
+
 <div class="wrapper mx-5">
     <div class="container mr-3">
         <div class="row pl-5 ml-1">
