--- a/gallery.html
+++ b/gallery.html
@@ -74,6 +74,10 @@
 </nav>
 
 <body>
+
+    <div class="evebanner">
+        <img src="img/Gallery.png" alt="">
+      </div>
     <div class="slideshow-container">
 
         <!-- Full-width images with number and caption text -->
