--- a/participants.html
+++ b/participants.html
@@ -215,6 +215,11 @@
 </nav>
 
 <body>
+
+    <div class="evebanner">
+        <img src="img/Participants.png" alt="">
+      </div>
+
     <div class="overflow-auto">
         <div class="w-full h-1/2 pb-7 pt-4 flex flex-col justify-center text-center ">
             <h1 class="text-3xl pb-7 font-weight-bold">Participants at Sri Sukhmai Insititue of Management, New Delhi
