--- a/practiceset.html
+++ b/practiceset.html
@@ -69,6 +69,11 @@
 </nav>
 
 <body>
+
+    <div class="evebanner">
+        <img src="img/Practice-set.png" alt="">
+      </div>
+
     <div class="overflow-auto">
         <div class="w-full h-1/2 pb-5 pt-4 flex flex-col justify-center text-center ">
             <h1 class="text-5xl pb-7 pt-4">Quiz</h1>
