--- a/training.html
+++ b/training.html
@@ -142,6 +142,10 @@
 
 <body>
 
+    <div class="evebanner">
+        <img src="img/Training.png" alt="">
+      </div>
+
     <!-- <header>
         <div class="collapse bg-dark" id="navbarHeader">
             <div class="container">
