--- a/winners_page.html
+++ b/winners_page.html
@@ -74,12 +74,13 @@
 </nav>
 
 <body class="eventbody">
+
+    <div class="evebanner">
+        <img src="img/Winner.png" alt="">
+      </div>
   
 <div class="main">
-    <div class="head">
-    <div class="winnerbanner">
-    <img src="img/winners-banner.png" alt="">
-    </div>  
+    <div class="head">  
     <div class="wrapper">
         <h3 class="card-title">Results</h3>
          <div class="cols">
