--- a/contact.html
+++ b/contact.html
@@ -70,6 +70,11 @@
 </nav>
 
 <body>
+
+    <div class="evebanner">
+        <img src="img/Contact.png" alt="">
+      </div>
+
     <main class="contact-main">
         <div class="containerofcontact">
             <div class="contentofcontainer">
