--- a/event.html
+++ b/event.html
@@ -74,20 +74,10 @@
 </nav>
 
 <body class="eventbody">
-  
-  <div class="main">
-    <div class="event2bar">
 
-    <img src="img/eve.png" alt="" width="100%" height="400px" style="position: relative; text-align: center; ">
-    <h2 style=" position: absolute;
-       top: 40%;
-       left: 50%;
-      transform: translate(-50%, -50%) ; color: white;;
-    ">EVENTS</h2> <br> 
-    <h4 style=" position: absolute;
-       top: 50%;
-       left: 50%;
-  transform: translate(-50%, -50%);  color: white;">It always seems impossible until its done</h4>
+  <div class="evebanner">
+    <img src="img/Events.png" alt="">
+  </div>
 
       <div class="container">
         <div class="card-container">
