--- a/winners.html
+++ b/winners.html
@@ -80,21 +80,21 @@
         <h3 class="card-title"> Ideathon Results</h3>    
         <div class = "container">
             <div class ="card">
-                <img src ="img/Kunal-Thapliyal-1st-Ideathon-150x150.jpeg" alt ="Kunal Thapliyal" class="img">
+                <img src ="img/Kunal-Thapliyal-1st-Ideathon-150x150.jpeg" alt ="Kunal Thapliyal" class="img_p">
                 <div class="intro">
                     <h1> Kunal Thapliyal</h1>
                     <p> <span> Winner Ideathon</span>- secured 1st positon in Ideathon </p>
                 </div>
             </div>
             <div class ="card">
-                <img src ="img/Daksh-Suryavanshi-2nd-Ideathon-150x150.jpeg" alt ="Daksh Suryavanshi" class="img">
+                <img src ="img/Daksh-Suryavanshi-2nd-Ideathon-150x150.jpeg" alt ="Daksh Suryavanshi" class="img_p">
                 <div class="intro">
                     <h1>Daksh Suryavanshi</h1>
                     <p> <span> Runner up Ideathon</span>- secured 2nd positon in Ideathon </p>
                 </div>
             </div>
             <div class ="card">
-                <img src ="img/Anmol-Ratan-Pic-3rd-Ideathon-150x150.jpeg" alt ="AnmolRatan" class="img">
+                <img src ="img/Anmol-Ratan-Pic-3rd-Ideathon-150x150.jpeg" alt ="AnmolRatan" class="img_p">
                 <div class="intro">
                     <h1>Anmol Ratan</h1>
                     <p> <span> Second Runner up Ideathon</span>- secured 3rd positon in Ideathon </p>
