--- a/winners_page.html
+++ b/winners_page.html
@@ -107,7 +107,7 @@
               <div class="container">
                 <div class="front">
                   <div class="inner">
-                  <span><img src="images/img2.png" alt=""></span>
+                    <div class="front2"></div>
                   <p>Hackathon</p>
                   </div>
                 </div>
@@ -128,7 +128,7 @@
               <div class="container">
                 <div class="front">
                   <div class="inner">
-                  <span><img src="images/img3.png" alt=""></span>
+                    <div class="front3"></div>
                   <p>Ideathon</p>
                   </div>
                 </div>
@@ -149,7 +149,7 @@
               <div class="container">
                 <div class="front">
                   <div class="inner">
-                  <span><img src="images/img4.png" alt=""></span>
+                    <div class="front4"></div>
                   <p>Coding Competition</p>
                   </div>
                 </div>
