--- a/winners.html
+++ b/winners.html
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class ="card">
-                <img src ="img/Ashutosh-Pic-3rd-Ideathon150x150.jpeg" alt ="Ashutosh" class="img">
+                <img src ="img/Ashutosh-Pic-3rd-Ideathon150x150.jpeg" alt ="Ashutosh" class="img_p">
                 <div class="intro">
                     <h1>Ashutosh</h1>
                     <p> <span> Second Runner up Ideathon</span>- secured 3rd positon in Ideathon </p>
