Updated in participants

--- a/participants.html
+++ b/participants.html
@@ -289,7 +289,7 @@
                     <div class="flip-box-back text-center"
                         style="background-image: url('img/newfolder/card1.png');">
                         <div class="inner color-white">
-                            <button class="flip-box-button">Learn More</button>
+                         <a href="greenpanther.html"><button class="flip-box-button">Learn More</button></a>   
                         </div>
                     </div>
                 </div>
@@ -302,7 +302,7 @@
                     <div class="flip-box-back text-center"
                         style="background-image: url('img/newfolder/card2.png');">
                         <div class="inner color-white">
-                            <button class="flip-box-button">Learn More</button>
+                            <a href="unnati.html"><button class="flip-box-button">Learn More</button></a>   
                         </div>
                     </div>
                 </div>
@@ -315,7 +315,7 @@
                     <div class="flip-box-back text-center"
                         style="background-image: url('img/newfolder/card3.png');">
                         <div class="inner color-white">
-                            <button class="flip-box-button">Learn More</button>
+                            <a href="krishi.html"><button class="flip-box-button">Learn More</button></a>   
                         </div>
                     </div>
                 </div>
@@ -328,7 +328,7 @@
                     <div class="flip-box-back text-center"
                         style="background-image: url('img/newfolder/card4.png');">
                         <div class="inner color-white">
-                            <button class="flip-box-button">Learn More</button>
+                            <a href="pragati.html"><button class="flip-box-button">Learn More</button></a>  
                         </div>
                     </div>
                 </div>
