--- a/winners.html
+++ b/winners.html
@@ -77,7 +77,7 @@
   
 <div class="main">
     <div class="head">
-        <div class="ideathon_result">
+        <div class="ideathon_result"></div>
             <h1 class="card-title"> Ideathon Results</h1>   
             <div class = "container1">
                 <h2> 1st Position</h2>
@@ -101,6 +101,7 @@
                 </div>
             </div>
             <div class = "container3">
+                <div class="head-div2">
                 <h2 > 3rd Position</h2>
                 <div class="card-container">
                     <div class="card1">
@@ -120,7 +121,9 @@
                       <h3>Harsh</h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     </div>
-                  </div>                  
+                </div>
+                </div>
+                </div>                  
             </div>
         </div>
 
