--- a/practiceset.html
+++ b/practiceset.html
@@ -409,7 +409,7 @@
                 <div class="px-3 py-3">
                     <!-- first element  web desigening -->
                     <div class="flex flex-col bg-black max-w-[250px] min-h-[300px] items-center">
-                        <img src="quizImage.png" class="w-full h-[200px]" alt="">
+                        <img src="img/quizImage.png" class="w-full h-[200px]" alt="">
                         <!-- heading tag -->
                         <h2 class="text-white"> Web desigening</h2>
                         <!-- cource by -->
@@ -462,9 +462,9 @@
                 <div class="px-3 py-3">
                     <!-- first element  web desigening -->
                     <div class="flex flex-col bg-black max-w-[250px] min-h-[300px] items-center">
-                        <img src="quizImage.png" class="w-full h-[200px]" alt="">
+                        <img src="img/quizImage.png" class="w-full h-[200px]" alt="">
                         <!-- heading tag -->
-                        <h2 class="text-white"> Web desigening</h2>
+                        <h2 class="text-white">Web desigening</h2>
                         <!-- cource by -->
                         <h2 class="text-white">
                             by xyz
