--- a/dashboard.html
+++ b/dashboard.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" href="dashboard.css" type="text/css"/>
+	<link rel="stylesheet" href="css/dashboard.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-<link rel="stylesheet" href="./mobile-style.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
     rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
@@ -64,120 +64,110 @@
     </div>
 </nav>
 
- <body id = "body">
-    <section class="section-0">
-<div class="main_dash">
-          	
-<div id="main">
-
-	<div class="head">
-		<div class="col-div-6">
-<span style="font-size:30px;cursor:pointer; color: rgb(0, 0, 0);" class="nav"  > Dashboard</span>
-</div>	
-	<div class="clearfix"></div>
-</div>
-
-	<div class="clearfix"></div>
-	<br/>
-	
-	<div class="col-div-3">
-		<div class="box">
-			<p>5<br/><span>Hackathons</span></p>
-			<i class="fa fa-users box-icon"></i>
-		</div>
-	</div>
-	<div class="col-div-3">
-		<div class="box">
-			<p>2<br/><span>Courses</span></p>
-			<i class="fa fa-list box-icon"></i>
-		</div>
-	</div>
-	<div class="col-div-3">
-		<div class="box">
-			<p>5<br/><span>Prizes</span></p>
-			<i class="fa fa-shopping-bag box-icon"></i>
-		</div>
-	</div>
-	<div class="col-div-3">
-		<div class="box">
-			<p>1<br/><span>Collaborations</span></p>
-			<i class="fa fa-tasks box-icon"></i>
-		</div>
-	</div>
-	<div class="clearfix"></div>
-	<br/><br/>
-	<div class="col-div-8">
-		<div class="box-8">
-		<div class="content-box">
-			<p>Your Events <span>See All</span></p>
-			<br/>
-			<table>
-  <tr>
-    <th>Event name</th>
-    <th>Idea</th>
-    <th>Position</th>
-  </tr>
-  <tr>
-    <td>Samadhan</td>
-    <td>Fire alarm system</td>
-    <td>Third</td>
-  </tr>
-  <tr>
-    <td>Krishi Vikalp</td>
-    <td>Sustainable</td>
-    <td>None</td>
-  </tr>
-  <tr>
-    <td>Eniac</td>
-    <td>Robot Designing</td>
-    <td>First</td>
-  </tr>
-  <tr>
-    <td>Event</td>
-    <td>Idea</td>
-    <td>none</td>
-  </tr>
-  <tr>
-    <td>Event</td>
-    <td>Idea</td>
-    <td>none</td>
-  </tr>
-   <tr>
-    <td>Event</td>
-    <td>Idea</td>
-    <td>none</td>
-  </tr>
-  
-  
-</table>
-		</div>
-	</div>
-	</div>
-
-	<div class="col-div-4">
-		<div class="box-4">
-		<div class="content-box">
-			<p>Score <span>See All</span></p>
-
-			<div class="circle-wrap">
-    <div class="circle">
-      <div class="mask full">
-        <div class="fill"></div>
-      </div>
-      <div class="mask half">
-        <div class="fill"></div>
-      </div>
-      <div class="inside-circle"> 700</div>
-    </div>
-  </div>
-		</div>
-	</div>
-	</div>
-		
-	<div class="clearfix"></div>
-</div>
-</div>
+ <body id="body">
+    <div class="main_dash">
+        <div id="main">
+            <div class="head">
+                <div class="col-div-6">
+                    <span style="font-size:30px;cursor:pointer; color: rgb(0, 0, 0);" class="nav"  > Dashboard</span>
+                </div>	
+                <div class="clearfix"></div>
+            </div>
+            <div class="clearfix"></div>
+            <br/>
+            <div class="col-div-3">
+                <div class="box">
+                    <p>5<br/><span>Hackathons</span></p>
+                    <i class="fa fa-users box-icon"></i>
+                </div>
+            </div>
+            <div class="col-div-3">
+                <div class="box">
+                    <p>2<br/><span>Courses</span></p>
+                    <i class="fa fa-list box-icon"></i>
+                </div>
+            </div>
+            <div class="col-div-3">
+                <div class="box">
+                    <p>5<br/><span>Prizes</span></p>
+                    <i class="fa fa-shopping-bag box-icon"></i>
+                </div>
+            </div>
+            <div class="col-div-3">
+                <div class="box">
+                    <p>1<br/><span>Collaborations</span></p>
+                    <i class="fa fa-tasks box-icon"></i>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+            <br/><br/>
+            <div class="col-div-8">
+                <div class="box-8">
+                    <div class="content-box">
+                        <p>Your Events <span>See All</span></p>
+                        <br/>
+                        <table>
+                            <tr>
+                                <th>Event name</th>
+                                <th>Idea</th>
+                                <th>Position</th>
+                            </tr>
+                            <tr>
+                                <td>Samadhan</td>
+                                <td>Fire alarm system</td>
+                                <td>Third</td>
+                            </tr>
+                            <tr>
+                                <td>Krishi Vikalp</td>
+                                <td>Sustainable</td>
+                                <td>None</td>
+                            </tr>
+                            <tr>
+                                <td>Eniac</td>
+                                <td>Robot Designing</td>
+                                <td>First</td>
+                            </tr>
+                            <tr>
+                                <td>Event</td>
+                                <td>Idea</td>
+                                <td>none</td>
+                            </tr>
+                            <tr>
+                                <td>Event</td>
+                                <td>Idea</td>
+                                <td>none</td>
+                            </tr>
+                            <tr>
+                                <td>Event</td>
+                                <td>Idea</td>
+                                <td>none</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="col-div-4">
+                <div class="box-4">
+                    <div class="content-box">
+                        <p>Score <span>See All</span></p>
+                        <div class="circle-wrap">
+                            <div class="circle">
+                                <div class="mask full">
+                                    <div class="fill"></div>
+                                </div>
+                                <div class="mask half">
+                                    <div class="fill"></div>
+                                </div>
+                                <div class="inside-circle"> 700</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="clearfix"></div></div>
+        </div>
 </body>
+
 <footer class="footer-section">
     <div class="container">
         <div class="footer-content pt-5 pb-4">
