--- a/demo.html
+++ b/demo.html
@@ -68,7 +68,7 @@
 
 <body id="body">
   <div class="evebanner">
-    <img src="img/About-us.png" alt="">
+    <img src="img/Events.png" alt="">
   </div>
   <h2 class="heading"> <strong>Up-Coming Events</strong>  </h2>
   <div class="containerofcards">
