--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <h1 class="text-dark">Collaborate With Go Hackathon</h1>
             <p class="text-secondary">Some of our collaborations with top colleges</p>
         </div>
-        <div class="team row ">
+        <div class="row team">
             <div class="col-md-4 col-12 text-center">
                 <div class="card mr-2 d-inline-block shadow-lg">
                     <div class="card-img-top">
