--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -68,11 +68,11 @@
         </ul>
     </div>
 </nav>             
-<body class="eventbody">
+<body class="">
     <div class="imgheader">
         <img src="img/XYZ.png" alt="">
     </div>
-    <div class="row">
+    <div class="row eventbody">
         <div class="containereventdetail col-xl-8 col-lg-8">
             <div class="past-event">
                 <div>
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="registration-form col-xl-4 col-lg-4">
-            <form action="action_page.php">
+            <form action="action_page.php" method="post" enctype="text/plain">
                 <div class="container">
                     <h6> <strong> Register Now</strong></h6>
                     <p>Please fill in this form to create an account.</p>
