--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </li>
             <li class="nav-item dropdown">
                 <div class="dropdown">
-                    <a href="event.html" class="nav-link">EVENTS</a>
+                    <a href="events.html" class="nav-link">EVENTS</a>
                     <div class="dropdown-content">
                         <a href="#">LIVE EVENTS</a>
                         <a href="#">UPCOMMING EVENTS</a>
