Update in Contact

--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
               <div class="left-side">
                 <div class="address details">
                   <i class="fas fa-map-marker-alt"></i>
-                  <div class="topic">Address</div>
+                  <div class="topic"><strong>Address</strong></div>
                   <div class="text-one">
                     <a href="https://goo.gl/maps/pbUCwkLDEffmwu7y5">
                     AAG – 11, Shipra Krishna Azure <br> Kaushambi, Ghaziabad, UP – 201010</a>
@@ -90,22 +90,19 @@
                 </div>
                 <div class="phone details">
                     <i class="fa fa-phone" style="font-size:36px"></i>
-                  <div class="topic">Phone</div>
+                  <div class="topic"><strong>Phone</strong></div>
                   <div class="text-one">
-                    <a href="tel:+91 9910018925">+91 9910018925</a>
-                  </div>
-                  <div class="text-two">
+                    <a href="tel:+91 9910018925">+91 9910018925</a> <br>
                     <a href="tel:+91-120-4567841">+91-120-4567841</a>
                   </div>
                 </div>
                 <div class="email details">
                   <i class="fas fa-envelope"></i>
-                  <div class="topic">Email</div>
+                  <div class="topic"><strong>Email</strong></div>
                   <div class="text-one">
-                    <a href="mailto:info@gohackathon.in">info@gohackathon.in</a>
+                    <a href="mailto:info@gohackathon.in">info@gohackathon.in</a> <br>
+                    <a href="mailto:gohackathon2k22@gmail.com">gohackathon2k22@gmail.com</a>
                   </div>
-                  <div class="text-two">
-                  <a href="mailto:gohackathon2k22@gmail.com">gohackathon2k22@gmail.com</a></div>
                 </div>
               </div>
               <div class="right-side">
