payment and upcoming

--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -116,11 +116,15 @@
             <form action="action_page.php" method="post" enctype="text/plain">
                 <div class="container">
                     <h6> <strong> Register Now</strong></h6>
-                    <p>Please fill in this form to create an account.</p>
+                    <p>Please fill in this form to register for the event.</p>
                     <hr>
 
+                    <label for="Event Name"> <b>Event Name</b> </label>
+                    <input type="text" placeholder="event name">
                     <label for="Phone"> <b>Phone Number</b> </label>
+                    <br>
                     <input type="number" placeholder="Contact No." name="Phone" id="required">
+                    <br>
                     <br>
                     <label for="email"><b>Email</b></label>
                     <input type="text" placeholder="Enter Email" name="email" id="email" required>
@@ -128,12 +132,13 @@
                     <label for="psw"><b>Password</b></label>
                     <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
 
-                    <label for="psw-repeat"><b>Repeat Password</b></label>
-                    <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required>
+                    <!-- <label for="psw-repeat"><b>Repeat Password</b></label>
+                    <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required> -->
                     <hr>
 
                     <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-                    <button type="submit" class="registerbtn">Register</button>
+                    <a href="payment.html"><button type="submit" class="registerbtn">Register</button></a>
+                    
                 </div>
                 <!--               
                 <div class="container signin">
